fix(styles/RecipeCards): prevent recipe-cards grid from overflowing on mobile screens

--- a/src/styles/components/RecipeCards.css
+++ b/src/styles/components/RecipeCards.css
@@ -1,7 +1,7 @@
 .recipe-cards {
   display: grid;
   gap: 12px;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, calc((100% - (40px + 12px * 2.75)) / 7));
   width: 100%;
 }
 
@@ -68,30 +68,30 @@
 
 @media only screen and ( max-width: 1400px ) {
   .recipe-cards {
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(6, calc((100% - (40px + (12px * 1.75))) / 6));
   }
 }
 
 @media only screen and ( max-width: 1200px ) {
   .recipe-cards {
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, calc((100% - (40px + 8px)) / 5));
   }
 }
 
 @media only screen and ( max-width: 950px ) {
   .recipe-cards {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, calc((100% - 36px) / 4));
   }
 }
 
 @media only screen and ( max-width: 700px ) {
   .recipe-cards {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, calc(100% / 3.135));
   }
 }
 
 @media only screen and ( max-width: 600px ) {
   .recipe-cards {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, calc(100% / 2.075));
   }
 }
